# ragged-stubs

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  update-license-year.yml  update-lockfiles.yml
src/ragged-stubs/: __init__.pyi  _helper_functions.pyi  _import.pyi  _spec_array_object.pyi  _spec_constants.pyi  _spec_creation_functions.pyi  _spec_data_type_functions.pyi  _spec_elementwise_functions.pyi  _spec_indexing_functions.pyi  _spec_linear_algebra_functions.pyi  _spec_manipulation_functions.pyi  _spec_searching_functions.pyi  _spec_set_functions.pyi  _spec_sorting_functions.pyi  _spec_statistical_functions.pyi  _spec_utility_functions.pyi  _typing.pyi  _version.pyi
src/ragged-stubs/io/: __init__.pyi  cf.pyi
