[build-system]
requires = ["uv-build >=0.10.10,<0.11.0"]
build-backend = "uv_build"

[project]
name = "ragged-stubs"
version = "0.2.0a6"
description = "Typing stubs for Ragged"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
keywords = ["jagged-array", "ragged-array", "typing", "stubs"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Stubs Only",
]
dependencies = [
    "optype[numpy] >=0.9.2",
    "packaging >=14.1.0",
    "ragged ==0.2.0",
    "typing-extensions >=4.12.0",
]

[dependency-groups]
numtype = [
    "numtype @ git+https://github.com/numpy/numtype.git@e436b884d7b3f7831790da67a95aa6dfda2e57f7",
]

[[project.authors]]
name = "hingebase"
email = "zcliu@pku.edu.cn"

[project.urls]
Homepage = "https://github.com/hingebase/ragged-stubs"
"Source Code" = "https://github.com/hingebase/ragged-stubs"
"Issue Tracker" = "https://github.com/hingebase/ragged-stubs/issues"

[tool.basedpyright]
reportUnnecessaryTypeIgnoreComment = "warning"
strict = ["."]
typeCheckingMode = "off"

[tool.ruff]
line-length = 130  # https://github.com/astral-sh/ruff/issues/16057
preview = true

[tool.ruff.lint]
select = ["ALL"]

[tool.tombi.lint.rules]
tables-out-of-order = "off"

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-attribute = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"
unsupported-dynamic-base = "warn"

[tool.uv.sources]
ragged = { git = "https://github.com/scikit-hep/ragged", branch = "main" }
